refactor: add missing return types and s/GET/POST/
